--- a/Resources/Html/main.html
+++ b/Resources/Html/main.html
@@ -70,7 +70,7 @@
           <br><input type="range" id="countdown" name="countdown" value="10" min="5" max="20" oninput="this.nextElementSibling.value = this.value">
           <output>10</output> seconds<br><br>
           <br>
-
+          <input type="hidden" id="originator" name="originator" value="main" />
           <input type="submit" value="Start" id="start" name="start">
       </fieldset>
   <b>{message}</b>
