Added templating in countdown to take the selected value on the front page into account.

--- a/Resources/Html/main.html
+++ b/Resources/Html/main.html
@@ -46,7 +46,7 @@
             }
         }
     </style>
-    <title>ISCB Target System</title>
+    <title>ISCB Targets System - Main</title>
 </head>
  <body>
   <h1>ISCB Target System</h1>
@@ -73,7 +73,6 @@
           <input type="hidden" id="originator" name="originator" value="main" />
           <input type="submit" value="Start" id="start" name="start">
       </fieldset>
-  <b>{message}</b>
   </form>
  </body>
 </html>
