--- a/Resources/Html/countdown.html
+++ b/Resources/Html/countdown.html
@@ -2,10 +2,54 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Countdown</title>
+    <style>
+        * {
+            box-sizing: border-box;
+        }
+
+        h1,
+        legend {
+            text-align: center;
+        }
+
+        form {
+            max-width: 250px;
+            margin: 10px auto 0 auto;
+        }
+
+        fieldset {
+            border-radius: 5px;
+            box-shadow: 3px 3px 15px hsl(0, 0%, 90%);
+            font-size: large;
+        }
+
+        input {
+            width: 100%;
+            padding: 4px;
+            margin-bottom: 8px;
+            border: 1px solid hsl(0, 0%, 50%);
+            border-radius: 3px;
+            font-size: medium;
+        }
+
+            input[type=submit]:hover {
+                cursor: pointer;
+                background-color: hsl(0, 0%, 90%);
+                transition: 0.5s;
+            }
+
+        @media only screen and (max-width: 768px) {
+            form {
+                max-width: 100%;
+            }
+        }
+    </style>
+
+    <title>ISCB Targets System - Countdown</title>
     <script>
-        let countdown = 10;
+        let countdown = {{countdownValue}};
         function updateCountdown() {
             document.getElementById("countdown").innerText = countdown;
             if (countdown === 0) {
@@ -22,9 +66,8 @@
 </head>
 <body>
     <h1>Stand by</h1>
-    <span id="countdown">3</span>
+    <span id="countdown">10</span>
     <form id="countdownForm" action="/startTargetsAction" method="POST">
-        <input type="hidden" name="submitted" value="true">
         <input type="hidden" id="originator" name="originator" value="countdown" />
     </form>
 </body>
