--- a/Resources/Html/main.html
+++ b/Resources/Html/main.html
@@ -45,6 +45,14 @@
                 max-width: 100%;
             }
         }
+
+        .copyright {
+            position: fixed;
+            bottom: 10px;
+            right: 10px;
+            font-size: 14px;
+            color: #666;
+        }          
     </style>
     <title>ISCB Targets System - Main</title>
 </head>
@@ -74,5 +82,6 @@
           <input type="submit" value="Start" id="start" name="start">
       </fieldset>
   </form>
+  <span class="copyright">© ISCB 2024</span>
  </body>
 </html>
