Added abort button in the countdown page. Added logic for the abort button.

--- a/Resources/Html/countdown.html
+++ b/Resources/Html/countdown.html
@@ -87,6 +87,7 @@
     <h1>Stand by</h1>
     <span id="countdown" class="countdown center-screen">10</span>
     <form id="countdownForm" method="POST">
+        <input type="submit" value="Abort" id="abort" name="abort">
         <input type="hidden" id="originator" name="originator" value="countdown" />
     </form>
     <span class="copyright">© ISCB 2024</span>
