--- a/Resources/Html/shooting.html
+++ b/Resources/Html/shooting.html
@@ -53,8 +53,8 @@
             transform: translate(-50%, -50%);
         }
 
-        .countdown {
-            font-size: 144px;
+        .shooting {
+            font-size: 36px;
         }
 
         .copyright {
@@ -114,30 +114,35 @@
                 //     }
                 // }
             }else{
-                document.getElementById("bucht").innerHTML = evt.data;
+                var data=evt.data.split('#');
                 if(evt.data.toString()=="Shooting finished")
                 {
                     var btn=document.getElementById("abort");
                     btn.innerHTML='Start again';
+                    document.getElementById("bucht").innerHTML='Finished!';
+                    document.getElementById("header").innerHTML='Shooting finished';
+                }
+                else
+                {
+                    document.getElementById("bucht").innerHTML = 'round #'+data[0]+' out of '+data[1] + '<BR>Target is now '+data[2];
                 }
 				console.log(evt.data);
 			}
         };
 
         function abort_click(){
-            clearTimeout(timeoutID);
-            alert("aborted");
+            console.log('Click on abort button detected.');
         }
 
     </script>
 </head>
 <body>
-    <h1>Shooting in progress</h1>
-    <form id="countdownForm" method="POST">
+    <h1 id="header">Shooting in progress</h1>
+    <form id="shootingForm" method="POST">
         <input type="submit" value="Abort" id="abort" name="abort" onclick="abort_click()">
         <input type="hidden" id="originator" name="originator" value="shooting" />
     </form>
-    <span id="bucht" name="bucht" class="countdown center-screen">bucht</span>
+    <span id="bucht" name="bucht" class="shooting center-screen"></span>
     <span class="copyright">© ISCB 2024</span>
 </body>
 </html>
