Implemented threading for the shooting loop (#4).

--- a/Resources/Html/shooting.html
+++ b/Resources/Html/shooting.html
@@ -132,6 +132,7 @@
 
         function abort_click(){
             console.log('Click on abort button detected.');
+            document.getElementById("shootingForm").submit();
         }
 
     </script>
